fix: The link of a wish now opens in a new tab
The link of a wish now opens in a new tab instead of the same tab.

--- a/templates/app/own-wish-list.html
+++ b/templates/app/own-wish-list.html
@@ -60,7 +60,7 @@
 					</h2>
 					{% if wish.link %}
 						<div>
-							<a href="{{ wish.link }}">Link</a>
+							<a href="{{ wish.link }}" target="_blank" rel="noopener noreferrer">Link</a>
 						</div>
 					{% endif %}
 					<div class="card-actions">
@@ -76,7 +76,8 @@
 						{% endif %}
 					</div>
 				</div>
-			</div>            {% endfor %}
+			</div>
+		{% endfor %}
 		{% if wishes|length == 0 %}
 			Keine Wünsche vorhanden.
 		{% endif %}
