--- a/templates/base.html
+++ b/templates/base.html
@@ -32,14 +32,35 @@
 					</svg>
 				</div>
 				<div>
-					{% block header_small %}
-					{% endblock %}
+					<ul tabindex="0" class="p-2 shadow menu dropdown-content bg-base-100 rounded-box w-52 text-black">
+						{% block header_small %}
+						{% endblock %}
+						<div class="divider"></div>
+						<li>
+							<a href="{% url 'password_change' %}">Passwort ändern</a>
+						</li>
+						<li>
+							<a href="{% url 'logout' %}">{{ user.username }} abmelden</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 
-			<button class="btn btn-ghost btn-sm rounded-btn hidden lg:flex">
-				<a href="{% url 'logout' %}">{{ user.username }} abmelden</a>
-			</button>
+			<div class="dropdown dropdown-end hidden lg:flex">
+				<div tabindex="0" class="btn btn-ghost rounded-btn">
+					Account
+				</div>
+				<div>
+					<ul tabindex="0" class="p-2 shadow menu dropdown-content bg-base-100 rounded-box w-52 text-black">
+						<li>
+							<a href="{% url 'password_change' %}">Passwort ändern</a>
+						</li>
+						<li>
+							<a href="{% url 'logout' %}">{{ user.username }} abmelden</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		{% endif %}
 	</div>
 </div>
