--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
-<!-- templates/base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}Wunschliste{% endblock %}</title>
-	<link href="https://cdn.jsdelivr.net/npm/daisyui@1.16.2/dist/full.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
+	<link href="{% static 'css/daisyui.css' %}" rel="stylesheet" type="text/css">
+	<link href="{% static 'css/tailwind.min.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="navbar mb-2 shadow-lg bg-neutral text-neutral-content rounded-box">
