--- a/templates/app/own-wish-list.html
+++ b/templates/app/own-wish-list.html
@@ -64,7 +64,9 @@
 					{% endif %}
 					<div class="card-actions">
 						{% if wish.owner == user %}
-							<a class="btn btn-sm" href="{% url 'deleteWish' wish.id %}?list_owner={{ list_owner.id }}">Löschen</a>{% endif %}
+							<a class="btn btn-sm" href="{% url 'deleteWish' wish.id %}?list_owner={{ list_owner.id }}">Löschen</a>
+							<a class="btn btn-sm" href="{% url 'editWish' wish.id %}?list_owner={{ list_owner.id }}">Bearbeiten</a>
+						{% endif %}
 						{% if wish.wish_for != user and not wish.reserved_by %}
 							<a class="btn btn-sm" href="{% url 'reserveWish' wish.id %}?list_owner={{ list_owner.id }}">Reservieren</a>{% endif %}
 						{% if wish.wish_for != user and user == wish.reserved_by %}
