--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
-<!-- templates/registration/login.html -->
 {% extends 'base.html' %}
+{% load customTags %}
 
 {% block title %}Anmelden{% endblock %}
 
@@ -20,4 +20,18 @@
 		       class="input input-bordered">
 		<button type="submit" class="btn">Anmelden</button>
 	</form>
+	<br>
+	<div data-tip="Kritische Fehler werden automatisch an das Entwicklungsteam geschickt und schnellstmöglich behoben."
+	     class="tooltip">
+		<div class="alert">
+			<div class="flex-1">
+				<!--<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="#2196f3"
+					 class="w-6 h-6 mx-2">-->
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+				      d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+				</svg>
+				<label>{{ "test" | error_tracking }}</label>
+			</div>
+		</div>
+	</div>
 {% endblock %}
