--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -36,7 +36,7 @@
 		<input type="password" name="new_password1"
 		       autocomplete="new-password" required=""
 		       id="id_new_password1" class="input input-bordered">
-		<div class="alert alert-info">
+		<div class="alert alert-info mt-4">
 			<div class="flex-1">
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
 				     class="w-6 h-6 mx-2 stroke-current">
@@ -59,6 +59,6 @@
 		<input type="password" name="new_password2"
 		       autocomplete="new-password" required=""
 		       id="id_new_password2" class="input input-bordered">
-		<button type="submit" class="btn">Passwort ändern</button>
+		<button type="submit" class="btn mt-4">Passwort ändern</button>
 	</form>
 {% endblock %}
