--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,9 @@
 <body>
 <div class="navbar mb-2 shadow-lg bg-neutral text-neutral-content rounded-box">
 	<div class="px-2 mx-2 navbar-start">
-        <span class="text-lg font-bold">
-	        Wunschzettel
-		</span>
+		<a href="{% url 'homeView' %}" class="text-lg font-bold">
+			Wunschliste
+		</a>
 	</div>
 	<div class="hidden px-2 mx-2 navbar-center lg:flex">
 		<div class="flex items-stretch">
