--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -5,5 +5,5 @@
 
 {% block content %}
 	<p>Passwort erfolgreich geändert.</p>
-	<a href="{% url 'homeView' %}" class="btn">Zurück</a>
+	<a href="{% url 'homeView' %}" class="btn mt-4">Zurück</a>
 {% endblock %}
