--- a/templates/app/own-wish-list.html
+++ b/templates/app/own-wish-list.html
@@ -57,6 +57,18 @@
 							</div>
 						{% endif %}
 					</h2>
+					{% if wish.owner != list_owner %}
+						<p>
+							<span class="italic">Vorschlag von {{ wish.owner }}</span>
+							<span class="tooltip tooltip-bottom z-10 inline-flex"
+							      data-tip="{{ list_owner }} kann diesen Vorschlag nicht sehen. Für weitere Fragen bitte an {{ wish.owner }} wenden.">
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+								     class="w-4 h-4 stroke-current"><path stroke-linecap="round" stroke-linejoin="round"
+								                                          stroke-width="2"
+								                                          d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>️
+							</span>
+						</p>
+					{% endif %}
 					{% if wish.link %}
 						<div>
 							<a class="link" href="{{ wish.link }}" target="_blank"
