revert: Remove SEntry error reporting
Signed-off-by: Tobias Mieves <tobias.mieves@tu-dortmund.de>

--- a/templates/app/edit-wish.html
+++ b/templates/app/edit-wish.html
@@ -43,6 +43,6 @@
 		<label class="label" for="wish-link"><span class="label-text">Link</span></label>
 		<input type="url" id="wish-link" name="wish-link" class="input input-bordered" value="{{ wish.link }}">
 		<br>
-		<input type="submit" value="Speichern" class="btn">
+		<input type="submit" value="Speichern" class="btn mt-4">
 	</form>
 {% endblock %}
