--- a/templates/app/edit-wish.html
+++ b/templates/app/edit-wish.html
@@ -42,6 +42,9 @@
 		       required>
 		<label class="label" for="wish-link"><span class="label-text">Link</span></label>
 		<input type="url" id="wish-link" name="wish-link" class="input input-bordered" value="{{ wish.link }}">
+		<label class="label" for="wish-quantity"><span class="label-text">Anzahl</span></label>
+		<input type="number" id="wish-quantity" name="wish-quantity" class="input input-bordered"
+		       value="{{ wish.quantity }}" min="1">
 		<br>
 		<input type="submit" value="Speichern" class="btn mt-4">
 	</form>
