--- a/templates/app/own-wish-list.html
+++ b/templates/app/own-wish-list.html
@@ -41,6 +41,8 @@
 		<input type="text" id="wish-text" name="wish-text" class="input input-bordered" required>
 		<label class="label" for="wish-link"><span class="label-text">Link</span></label>
 		<input type="url" id="wish-link" name="wish-link" class="input input-bordered">
+		<label class="label" for="wish-quantity"><span class="label-text">Anzahl</span></label>
+		<input type="number" id="wish-quantity" name="wish-quantity" class="input input-bordered" value="1" min="1">
 		<br>
 		<input type="submit" value="Hinzufügen" class="btn mt-4">
 	</form>
@@ -51,12 +53,17 @@
 				<div class="card-body">
 					<h2 class="card-title">
 						{{ wish.text }}
-						{% if wish.wish_for != user and wish.reserved_by %}
+						{% if wish.wish_for != user and wish.reserved_by.all|length > 0 %}
 							<div class="badge">
-								Reserviert von {{ wish.reserved_by.username }}
+								Reserviert von {{ wish.reserved_by.all|join:", " }}
 							</div>
 						{% endif %}
 					</h2>
+					{% if wish.quantity > 1 %}
+						<p>
+							<span class="italic font-bold">Anzahl: {{ wish.quantity }}</span>
+						</p>
+					{% endif %}
 					{% if wish.owner != list_owner %}
 						<p>
 							<span class="italic">Vorschlag von {{ wish.owner }}</span>
@@ -80,9 +87,9 @@
 							<a class="btn btn-sm" href="{% url 'deleteWish' wish.id %}?list_owner={{ list_owner.id }}">Löschen</a>
 							<a class="btn btn-sm" href="{% url 'editWish' wish.id %}?list_owner={{ list_owner.id }}">Bearbeiten</a>
 						{% endif %}
-						{% if wish.wish_for != user and not wish.reserved_by %}
+						{% if wish.wish_for != user and wish.reserved_by.all|length < wish.quantity and not user in wish.reserved_by.all %}
 							<a class="btn btn-sm" href="{% url 'reserveWish' wish.id %}?list_owner={{ list_owner.id }}">Reservieren</a>{% endif %}
-						{% if wish.wish_for != user and user == wish.reserved_by %}
+						{% if wish.wish_for != user and user in wish.reserved_by.all %}
 							<a class="btn btn-sm"
 							   href="{% url 'cancelReserveWish' wish.id %}?list_owner={{ list_owner.id }}">
 								Nicht mehr reservieren
