--- a/templates/app/create-wish.html
+++ b/templates/app/create-wish.html
@@ -37,7 +37,7 @@
 	<div class="flex items-center justify-center">
 		<div class="card card-bordered w-96 shadow-xl">
 			<div class="card-body">
-				<h2 class="card-title">Wunsch bearbeiten</h2>
+				<h2 class="card-title">Wunsch hinzufügen</h2>
 				<form method="post">
 					<div class="mb-2">
 						{% csrf_token %} {{ form.non_field_errors }}
@@ -63,7 +63,7 @@
 							{{ form.quantity }}
 						</div>
 						<div class="card-actions justify-end mt-4">
-							<button class="btn btn-primary" type="submit">Speichern</button>
+							<button class="btn btn-primary" type="submit">Hinzufügen</button>
 						</div>
 					</div>
 				</form>
