fix: Fix manifest and add more icon sizes and meta tags

--- a/templates/wishlist/wishlist-base.html
+++ b/templates/wishlist/wishlist-base.html
@@ -6,6 +6,27 @@
 {% block head %}
     <link rel="icon" type="image/x-icon" href="{% static 'wishlist/images/logo.png' %}">
     <link rel="manifest" href="{% url 'manifest' %}">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Wishlist">
+    <meta name="apple-mobile-web-app-title" content="Wishlist">
+    <meta name="msapplication-starturl" content="/">
+
+    <link rel="icon" type="image/png" sizes="24x24" href="{% static 'wishlist/images/logo-24.png' %}">
+    <link rel="apple-touch-icon" type="image/png" sizes="24x24" href="{% static 'wishlist/images/logo-24.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'wishlist/images/logo-16.png' %}">
+    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="{% static 'wishlist/images/logo-16.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'wishlist/images/logo-32.png' %}">
+    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="{% static 'wishlist/images/logo-32.png' %}">
+    <link rel="icon" type="image/png" sizes="64x64" href="{% static 'wishlist/images/logo-64.png' %}">
+    <link rel="apple-touch-icon" type="image/png" sizes="64x64" href="{% static 'wishlist/images/logo-64.png' %}">
+    <link rel="icon" type="image/png" sizes="128x128" href="{% static 'wishlist/images/logo-128.png' %}">
+    <link rel="apple-touch-icon" type="image/png" sizes="128x128" href="{% static 'wishlist/images/logo-128.png' %}">
+    <link rel="icon" type="image/png" sizes="256x256" href="{% static 'wishlist/images/logo-256.png' %}">
+    <link rel="apple-touch-icon" type="image/png" sizes="256x256" href="{% static 'wishlist/images/logo-256.png' %}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'wishlist/images/logo-512.png' %}">
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="{% static 'wishlist/images/logo-512.png' %}">
 {% endblock %}
 
 {% block home_logo %}
