fix: Empty stars are displayed for non-favorite wishes

--- a/templates/wishlist/own-wish-list.html
+++ b/templates/wishlist/own-wish-list.html
@@ -29,7 +29,7 @@
                     </span>
                         <a {% if list_owner == user %}href="{% url 'toggleFavorite' wish.id %}"{% endif %}
                            class="text-4xl">
-                            {% if wish.favorite %}★{% else %}☆{% endif %}
+                            {% if wish.favorite %}★{% elif list_owner == user %}☆{% endif %}
                         </a>
                     </h2>
                     {% if wish.quantity > 1 %}
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-        {% empty %}
+            {% empty %}
             <div class="alert alert-success shadow-lg">
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6" fill="none"
