--- a/templates/wishlist/wishlist-base.html
+++ b/templates/wishlist/wishlist-base.html
@@ -1,36 +1,53 @@
 {% extends 'base.html' %}
 {% load email_hash %}
 
-{% block title %}Wunschliste{% endblock %}
+{% block title %}Wunschliste {% block title_extra %}{% endblock %}{% endblock %}
 
 {% block home_logo %}
 	Wunschliste
+	{% block home_logo_extra %}
+	{% endblock %}
 {% endblock %}
 
-{% block navbar_extra %}
+{% block navbar_links %}
+	{% block navbar_extra %}
+	{% endblock %}
+	<li>
+		<a href="{% url 'reservationListView' %}">Meine Reservierungen</a>
+	</li>
+	<li tabindex="0">
+		<details>
+			<summary>Wunschlisten</summary>
+			<ul class="p-2">
+				{% for user in all_users %}
+					<li>
+						<a class="" href="{% url 'wishList' user.id %}">
+							{{ user.username }}
+						</a>
+					</li>
+				{% endfor %}
+			</ul>
+		</details>
+	</li>
 {% endblock %}
 
 {% block account_picture %}
 	<label tabindex="0" class="btn btn-ghost btn-circle avatar">
 		<div class="w-10 rounded-full">
-			<img src="https://www.gravatar.com/avatar/{{ person|email_hash }}?d=identicon" alt="Avatar" />
+			<img src="https://www.gravatar.com/avatar/{{ user|email_hash }}?d=identicon" alt="Avatar"/>
 		</div>
 	</label>
 {% endblock %}
 
-{% block sidebar_list %}
+{% block sidebar_links %}
 	<li>
 		<a href="{% url 'reservationListView' %}">Meine Reservierungen</a>
 	</li>
 	{% for user in all_users %}
-		{% if user == list_owner %}
-			<li class="bordered">
-				{% else %}
-			<li>
-		{% endif %}
-	<a class="" href="{% url 'wishList' user.id %}">
-		{{ user.username }}
-	</a>
-	</li>
+		<li>
+			<a class="" href="{% url 'wishList' user.id %}">
+				{{ user.username }}
+			</a>
+		</li>
 	{% endfor %}
 {% endblock %}
