fix: Text in navbar was not readable on hover in light mode

--- a/templates/wishlist/own-wish-list.html
+++ b/templates/wishlist/own-wish-list.html
@@ -10,7 +10,7 @@
 
 {% block navbar_extra %}
 	<li>
-		<a href="{% url 'createWish' list_owner.id %}" class="text-neutral-content hidden sm:flex">
+		<a href="{% url 'createWish' list_owner.id %}" class="hidden sm:flex">
 			Neuen Wunsch hinzufügen
 		</a>
 	</li>
