chore(deps): Update django-core to version v3 and update dockerfile

--- a/templates/wishlist/wishlist-base.html
+++ b/templates/wishlist/wishlist-base.html
@@ -4,44 +4,46 @@
 
 {% block title %}Wunschliste {% block title_extra %}{% endblock %}{% endblock %}
 {% block head %}
-    <link rel="icon" type="image/x-icon" href="{% static 'wishlist/images/logo.png' %}">
-    <link rel="manifest" href="{% url 'manifest' %}">
+	<link rel="icon" type="image/x-icon" href="{% static 'wishlist/images/logo.png' %}">
+	<link rel="manifest" href="{% url 'manifest' %}">
 
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Wishlist">
-    <meta name="apple-mobile-web-app-title" content="Wishlist">
-    <meta name="msapplication-starturl" content="/">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="application-name" content="Wishlist">
+	<meta name="apple-mobile-web-app-title" content="Wishlist">
+	<meta name="msapplication-starturl" content="/">
 
-    <link rel="icon" type="image/png" sizes="24x24" href="{% static 'wishlist/images/logo-24.png' %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="24x24" href="{% static 'wishlist/images/logo-24.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'wishlist/images/logo-16.png' %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="{% static 'wishlist/images/logo-16.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'wishlist/images/logo-32.png' %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="{% static 'wishlist/images/logo-32.png' %}">
-    <link rel="icon" type="image/png" sizes="64x64" href="{% static 'wishlist/images/logo-64.png' %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="64x64" href="{% static 'wishlist/images/logo-64.png' %}">
-    <link rel="icon" type="image/png" sizes="128x128" href="{% static 'wishlist/images/logo-128.png' %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="128x128" href="{% static 'wishlist/images/logo-128.png' %}">
-    <link rel="icon" type="image/png" sizes="256x256" href="{% static 'wishlist/images/logo-256.png' %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="256x256" href="{% static 'wishlist/images/logo-256.png' %}">
-    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'wishlist/images/logo-512.png' %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="{% static 'wishlist/images/logo-512.png' %}">
+	<link rel="icon" type="image/png" sizes="24x24" href="{% static 'wishlist/images/logo-24.png' %}">
+	<link rel="apple-touch-icon" type="image/png" sizes="24x24" href="{% static 'wishlist/images/logo-24.png' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'wishlist/images/logo-16.png' %}">
+	<link rel="apple-touch-icon" type="image/png" sizes="16x16" href="{% static 'wishlist/images/logo-16.png' %}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'wishlist/images/logo-32.png' %}">
+	<link rel="apple-touch-icon" type="image/png" sizes="32x32" href="{% static 'wishlist/images/logo-32.png' %}">
+	<link rel="icon" type="image/png" sizes="64x64" href="{% static 'wishlist/images/logo-64.png' %}">
+	<link rel="apple-touch-icon" type="image/png" sizes="64x64" href="{% static 'wishlist/images/logo-64.png' %}">
+	<link rel="icon" type="image/png" sizes="128x128" href="{% static 'wishlist/images/logo-128.png' %}">
+	<link rel="apple-touch-icon" type="image/png" sizes="128x128" href="{% static 'wishlist/images/logo-128.png' %}">
+	<link rel="icon" type="image/png" sizes="256x256" href="{% static 'wishlist/images/logo-256.png' %}">
+	<link rel="apple-touch-icon" type="image/png" sizes="256x256" href="{% static 'wishlist/images/logo-256.png' %}">
+	<link rel="icon" type="image/png" sizes="512x512" href="{% static 'wishlist/images/logo-512.png' %}">
+	<link rel="apple-touch-icon" type="image/png" sizes="512x512" href="{% static 'wishlist/images/logo-512.png' %}">
 {% endblock %}
 
 {% block home_logo %}
-    <div class="flex">
-        <div class="avatar">
-            <div class="w-10 rounded">
-                <img src="{% static 'wishlist/images/logo.png' %}"/>
-            </div>
-        </div>
-        <p class="m-auto">
-	        Wunschliste
-        {% block home_logo_extra %}
-	{% endblock %}
-        </p>
-    </div>
+	<a href="{% url 'home_view' %}" class="text-lg font-bold align-middle">
+		<div class="flex">
+			<div class="avatar">
+				<div class="w-10 rounded">
+					<img src="{% static 'wishlist/images/logo.png' %}" />
+				</div>
+			</div>
+			<p class="m-auto">
+				Wunschliste
+				{% block home_logo_extra %}
+				{% endblock %}
+			</p>
+		</div>
+	</a>
 {% endblock %}
 
 {% block navbar_links %}
@@ -67,11 +69,11 @@
 {% endblock %}
 
 {% block account_picture %}
-    <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
-            <img src="https://www.gravatar.com/avatar/{{ user|email_hash }}?d=identicon" alt="Avatar"/>
-        </div>
-    </label>
+	<label tabindex="0" class="btn btn-ghost btn-circle avatar">
+		<div class="w-10 rounded-full">
+			<img src="https://www.gravatar.com/avatar/{{ user|email_hash }}?d=identicon" alt="Avatar" />
+		</div>
+	</label>
 {% endblock %}
 
 {% block sidebar_links %}
