--- a/templates/wishlist/edit-wish.html
+++ b/templates/wishlist/edit-wish.html
@@ -29,6 +29,13 @@
 							</label>
 							{{ form.quantity }}
 						</div>
+                        <div class="form-control w-full max-w-xs">
+                            <label class="label" for="{{ form.depends_on.id_for_label }}">
+                                <span class="label-text">{{ form.depends_on.label_tag }}</span>
+                                <span class="label-text-alt">{{ form.depends_on.errors }}</span>
+                            </label>
+                            {{ form.depends_on }}
+                        </div>
 						<div class="card-actions justify-end mt-4">
 							<button class="btn btn-primary" type="submit">Speichern</button>
 						</div>
