--- a/templates/wishlist/wish_template.html
+++ b/templates/wishlist/wish_template.html
@@ -47,30 +47,32 @@
                    rel="noopener noreferrer">Link</a>
             </div>
         {% endif %}
-        <div class="card-actions">
-            {% if wish.owner == user %}
-                <a class="btn btn-sm"
-                   href="{% url 'deleteWish' wish.id %}?list_owner={{ list_owner.id }}">Löschen</a>
-                <a class="btn btn-sm"
-                   href="{% url 'editWish' wish.id %}?list_owner={{ list_owner.id }}">Bearbeiten</a>
-            {% endif %}
-            {% if wish.wish_for != user and wish.is_reservation_possible %}
-                <a class="btn btn-sm"
-                   href="{% url 'reserveWish' wish.id %}?list_owner={{ list_owner.id }}">Reservieren</a>{% endif %}
-            {% if wish.wish_for != user and user in wish.reserved_by.all %}
-                <a class="btn btn-sm"
-                   href="{% url 'cancelReserveWish' wish.id %}?list_owner={{ list_owner.id }}">
-                    Nicht mehr reservieren
-                </a>
-            {% endif %}
-        </div>
+        {% if not readonly %}
+            <div class="card-actions">
+                {% if wish.owner == user %}
+                    <a class="btn btn-sm"
+                       href="{% url 'deleteWish' wish.id %}?list_owner={{ list_owner.id }}">Löschen</a>
+                    <a class="btn btn-sm"
+                       href="{% url 'editWish' wish.id %}?list_owner={{ list_owner.id }}">Bearbeiten</a>
+                {% endif %}
+                {% if wish.wish_for != user and wish.is_reservation_possible %}
+                    <a class="btn btn-sm"
+                       href="{% url 'reserveWish' wish.id %}?list_owner={{ list_owner.id }}">Reservieren</a>{% endif %}
+                {% if wish.wish_for != user and user in wish.reserved_by.all %}
+                    <a class="btn btn-sm"
+                       href="{% url 'cancelReserveWish' wish.id %}?list_owner={{ list_owner.id }}">
+                        Nicht mehr reservieren
+                    </a>
+                {% endif %}
+            </div>
+        {% endif %}
         {% if wish.dependent_wishes.all %}
             <div class="collapse collapse-arrow {% if wish.reserved_by.all|length > 0 %}collapse-open{% endif %}">
                 <input type="checkbox" />
                 <div class="collapse-title text-xl font-medium">Abhängige Wünsche</div>
                 <div class="collapse-content">
                     {% for dep_wish in wish.dependent_wishes.all %}
-                        {% include "wishlist/wish_template.html" with wish=dep_wish %}
+                        {% include "wishlist/wish_template.html" with wish=dep_wish readonly=readonly %}
                     {% endfor %}
                 </div>
             </div>
